# Sensitive-Word-Filter-CN

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: sample_words.txt
examples/: demo.py
src/sensitive_word_filter_cn/: __init__.py  __main__.py  cli.py  core.py  utils.py
tests/: test_cli.py  test_core.py  test_performance.py  test_utils.py
